# crux

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crux-bar/: Package.swift
crux-bar/Sources/CruxBar/: CruxBarApp.swift  DataLoader.swift  PopoverView.swift  ProcessManager.swift  SessionRowView.swift  Theme.swift  WidgetData.swift
docs/superpowers/plans/: 2026-03-11-story-driven-dashboard.md
src/: budget.rs  config.rs  lib.rs  main.rs  pricing.rs  store.rs
src/cli/: mod.rs  statusline.rs  widget.rs
src/mcp/: mod.rs  tools.rs
src/parser/: conversation.rs  cursor.rs  liveness.rs  mod.rs  watcher.rs
src/store/: analysis.rs  cursor.rs  mod.rs
src/tui/: browser.rs  cursor_view.rs  daily.rs  dashboard.rs  help.rs  history.rs  insights.rs  mod.rs  models.rs  sessions.rs  stats.rs  trends.rs  widgets.rs
