[package]
name = "usagetracker"
version = "0.1.0"
edition = "2021"
description = "Terminal dashboard for AI coding tool token usage"
license = "MIT"
repository = "https://github.com/amaljithkuttamath/usagetracker"
keywords = ["claude-code", "token-usage", "terminal", "dashboard", "tui"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
notify = "7"
toml = "0.8"
dirs = "6"
anyhow = "1"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.0"

[lib]
name = "usagetracker"
path = "src/lib.rs"
