[package]
name = "crux-tokens"
version = "0.2.0"
edition = "2021"
description = "Terminal dashboard for Claude Code token usage and session analytics"
license = "MIT"
repository = "https://github.com/amaljithkuttamath/crux"
keywords = ["claude-code", "token-usage", "terminal", "dashboard", "tui"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
notify = "7"
toml = "0.8"
dirs = "6"
anyhow = "1"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.0"

[lib]
name = "crux"
path = "src/lib.rs"
